Align calendar correctly

--- a/src/enseignant/home_page/HomePage.css
+++ b/src/enseignant/home_page/HomePage.css
@@ -1,10 +1,12 @@
-.SwitchDay
-{
-    flex:1;
-}
 
 .Calendar
 {
-    display:flex;
+    display: flex;
     flex-direction: column;
+    max-width: 12.5rem;
+}
+
+.SwitchDay
+{
+    display: flex;
 }
